Changed some numbers and fixed a bugg
Changed the header height from 600px to 400px as it didn't fit the
screen properly (1920x1080).
fixed a bug in the "help" and "about" buttons. There was one to many
slashes in the url.

--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,7 @@ h1, h2, h3, h4, a, p {
 }
 
 .header {
-    height: 600px;
+    height: 400px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
